fix z-index glitch

--- a/sass/_issues.scss
+++ b/sass/_issues.scss
@@ -56,7 +56,7 @@
 
 }
 
-.issues {
+.issues, .related-issues {
   .checkbox input {
     display: none;
   }
